# splittab

./: .gitignore  LICENSE  README.md  capacitor.config.json  index.html  manifest.json  package.json  twa-manifest.json
.github/workflows/: build.yml  generate-keystore.yml
.well-known/: assetlinks.json
android-twa/: build.gradle.kts  settings.gradle.kts
android-twa/app/: build.gradle.kts
android-twa/app/src/main/: AndroidManifest.xml
android-twa/app/src/main/res/values/: colors.xml  strings.xml
electron/: main.js
scripts/: build.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
supabase/: schema.sql
