[package]
name = "splittab"
version = "1.0.0"
description = "SplitTab — Bill splitting app with cloud sync"
authors = ["vpradhap"]
edition = "2021"

# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-exclude-and-include-fields
[lib]
name = "splittab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
